force-app/main/default/objects/Apttus__WizardRuleset2__c/Apttus__WizardRuleset2__c.object-meta.xml
<CustomObject>
    <description>A collection of rules that are applied to input control and steps. The system determines a ruleset at the level of input control expression formula, determine focus objects, record type and step navigation rules.</description>
    <label>Wizard Ruleset</label>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>