force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__MetaPropertyFieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MetaPropertyFieldName__c</fullName>
    <label>MetaPropertyFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>