force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RecordTypeId__c</fullName>
    <description>Record type that corresponds to the record types for the object</description>
    <inlineHelpText>Record type that corresponds to the record types for the object</inlineHelpText>
    <label>Record Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>