force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__RuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuleType__c</fullName>
    <description>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</description>
    <inlineHelpText>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Determine Focus Object</fullName>
            </value>
            <value>
                <fullName>Determine Record Type</fullName>
            </value>
            <value>
                <fullName>Enable This Control</fullName>
            </value>
            <value>
                <fullName>Disable This Control</fullName>
            </value>
            <value>
                <fullName>Show This Control</fullName>
            </value>
            <value>
                <fullName>Hide This Control</fullName>
            </value>
            <value>
                <fullName>Set This Control Value</fullName>
            </value>
            <value>
                <fullName>Go To Step</fullName>
            </value>
            <value>
                <fullName>Go To Submit</fullName>
            </value>
            <value>
                <fullName>Go To Abort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>