force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__WizardInputControlId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardInputControlId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Wizard Input Control</description>
    <inlineHelpText>Lookup to Wizard Input Control</inlineHelpText>
    <label>Wizard Input Control</label>
    <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
    <relationshipLabel>Input Rulesets</relationshipLabel>
    <relationshipName>InputRulesets</relationshipName>
    <type>Lookup</type>
</CustomField>