force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__WizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Wizard Step</description>
    <inlineHelpText>Lookup to Wizard Step</inlineHelpText>
    <label>Wizard Step</label>
    <referenceTo>Apttus__WizardStep2__c</referenceTo>
    <relationshipLabel>Step Rulesets</relationshipLabel>
    <relationshipName>StepRulesets</relationshipName>
    <type>Lookup</type>
</CustomField>